# LLM-SSH-interface

./: Concept-rep.txt  README.md  Thumbs.db  pyproject.toml  structure.txt
docs/: additional_info.txt  file_structure.txt
llm_ssh_agent/: app_state.py  core_logic.py  init.py  llm_interface.py  pyproject.toml  secure_storage.py  ssh_manager.py  utils.py
llm_ssh_agent/gui/: init.py  main.py
llm_ssh_agent/tui/: app.py  init.py  main.py  main.py.old  style.tcss
llm_ssh_agent/tui/widgets/: init.py
